# matrix-bridge-plugin

./: Justfile  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: matrix-disable.md  matrix-enable.md  matrix-setup.md  matrix-status.md
docs/: design-codex-resume-completion.md  multi-machine-deployment.md  plan-codex-resume-completion.md
hooks/: hooks.json
scripts/: sync-to-global.sh
tests/: test_antigravity_hooks.py  test_antigravity_transcript.py  test_avatar_antigravity.py  test_cc_tts_tagging.py  test_chunking.py  test_codex_cli.py  test_codex_daemon.py  test_codex_notify_handler.py  test_codex_transcript.py  test_config_migration.py  test_daemon_ignore_audio.py  test_matrix_proxy.py  test_plugin_manifest.py  test_room_self_heal.py  test_session_map.py  test_sync_to_global.py  test_tts_routing.py
